[tool.poetry]
name = "publibike-stations"
version = "0.1.0"
description = "Python code for generating an updated list of PubliBike stations."
authors = ["Michal Ziemski <michal@terrestryal.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
